apps/overlays/order/dev/order-api-green-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-api
  labels:
    app: order-api
    version: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-api
      version: green
  template:
    metadata:
      labels:
        app: order-api
        version: green
    spec:
      containers:
        - name: order-api
          image: myregistry.azurecr.io/order-api:v1.1.0
