apps/overlays/order/dev/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: order-api
spec:
  host: order-api
  subsets:
    - name: blue
      labels:
        version: blue
    - name: green
      labels:
        version: green
